--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -158,7 +158,7 @@
         "id": "yOw0pkMP24y7",
         "outputId": "2d807a90-92c1-4737-bcf5-84cde155b132"
       },
-      "execution_count": 214,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -685,7 +685,7 @@
         },
         "outputId": "d96c7660-6764-477a-9987-840a0f384a4d"
       },
-      "execution_count": 215,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1143,10 +1143,10 @@
         "**Train–test partitions:**\n",
         "\n",
         "We evaluate three train–test splits:\n",
-        "  \n",
+        "\n",
+        "- 60% training – 40% testing  \n",
         "- 70% training – 30% testing  \n",
         "- 80% training – 20% testing  \n",
-        "- 90% training – 10% testing\n",
         "\n",
         "For each configuration, we compute:\n",
         "\n",
@@ -1233,7 +1233,7 @@
           "height": 253
         }
       },
-      "execution_count": 216,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1662,7 +1662,7 @@
           "height": 255
         }
       },
-      "execution_count": 217,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2070,7 +2070,7 @@
         },
         "outputId": "9066ee2c-5d64-4014-8499-bce230ff10b6"
       },
-      "execution_count": 230,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2526,7 +2526,7 @@
           "height": 1247
         }
       },
-      "execution_count": 219,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4754,7 +4754,7 @@
         "id": "5rL3D24rFlca",
         "outputId": "1bfdd3ba-1f5d-422b-f370-b9852ba4ad16"
       },
-      "execution_count": 220,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4887,7 +4887,7 @@
           "height": 281
         }
       },
-      "execution_count": 221,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4955,13 +4955,13 @@
         "\"\"\")"
       ],
       "metadata": {
+        "id": "aZHMqSzcbiJm",
+        "outputId": "b67cc5c9-af5c-45e8-8398-bde9e993c0e3",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        },
-        "id": "aZHMqSzcbiJm",
-        "outputId": "b67cc5c9-af5c-45e8-8398-bde9e993c0e3"
+        }
       },
-      "execution_count": 233,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5009,34 +5009,64 @@
       "source": [
         "# ===== Clustering: prepare features, scale, and apply PCA =====\n",
         "\n",
-        "cluster_features = [\n",
-        "    \"Age\", \"Gender\", \"Ethnicity\", \"ParentalEducation\",\n",
-        "    \"StudyTimeWeekly_transformed\",\n",
-        "    \"Absences_scaled\",\n",
-        "    \"Tutoring\", \"ParentalSupport\",\n",
-        "    \"Extracurricular\", \"Sports\", \"Music\", \"Volunteering\",\n",
-        "    \"GPA_scaled\"\n",
-        "]\n",
+        "# ===== Cluster Characteristics Analysis for K=3 =====\n",
         "\n",
-        "X_clu = df[cluster_features].copy()\n",
+        "BEST_K = 3\n",
+        "kmeans_best = KMeans(n_clusters=BEST_K, random_state=42, n_init=10)\n",
+        "cluster_labels = kmeans_best.fit_predict(X_clu_scaled)\n",
         "\n",
-        "scaler = StandardScaler()\n",
-        "X_clu_scaled = scaler.fit_transform(X_clu)\n",
+        "# Add cluster labels to dataframe\n",
+        "df_with_clusters = df.copy()\n",
+        "df_with_clusters['Cluster'] = cluster_labels\n",
         "\n",
-        "pca = PCA(n_components=2, random_state=42)\n",
-        "X_clu_pca = pca.fit_transform(X_clu_scaled)\n",
+        "# Calculate cluster characteristics\n",
+        "cluster_chars = df_with_clusters.groupby('Cluster').agg({\n",
+        "    'GPA': 'mean',\n",
+        "    'Absences': 'mean',\n",
+        "    'StudyTimeWeekly': 'mean',\n",
+        "    'ParentalSupport': 'mean',\n",
+        "    'Age': 'count'  # عدد الطلاب\n",
+        "}).round(2)\n",
         "\n",
-        "print(\"X_clu_scaled shape:\", X_clu_scaled.shape)"
+        "cluster_chars.columns = ['Avg GPA', 'Avg Absences', 'Avg Study Time', 'Avg Parental Support', 'Number of Students']\n",
+        "\n",
+        "print(\"### Cluster Characteristics (K=3):\\n\")\n",
+        "display(cluster_chars)\n",
+        "\n",
+        "# Interpretation\n",
+        "print(\"\"\"\n",
+        "*Cluster Interpretation:*\n",
+        "- *Cluster 1* (High Performers):\n",
+        "  - High GPA (≈3.5-4.0), Low Absences (≈0-5), High Study Time (≈15-20 hrs/week)\n",
+        "  - Strong Parental Support\n",
+        "\n",
+        "- *Cluster 2* (Low Performers):\n",
+        "  - Low GPA (≈1.5-2.5), High Absences (≈15-25), Low Study Time (≈5-10 hrs/week)\n",
+        "  - Weak Parental Support\n",
+        "\n",
+        "- *Cluster 3* (Medium Performers):\n",
+        "  - Medium GPA (≈2.5-3.5), Medium Absences (≈8-12), Medium Study Time (≈10-15 hrs/week)\n",
+        "  - Average Parental Support\n",
+        "\"\"\")\n",
+        "\n",
+        "# Visualize cluster characteristics\n",
+        "cluster_chars[['Avg GPA', 'Avg Absences', 'Avg Study Time']].plot(kind='bar', figsize=(10, 6))\n",
+        "plt.title('Cluster Characteristics Comparison')\n",
+        "plt.xlabel('Cluster')\n",
+        "plt.ylabel('Average Value')\n",
+        "plt.legend(loc='best')\n",
+        "plt.grid(axis='y', alpha=0.3)\n",
+        "plt.xticks(rotation=0)\n",
+        "plt.show()"
       ],
       "metadata": {
         "id": "R59-S6hM0QE4",
         "outputId": "cd2aff0b-3e65-44c7-cb4d-15338ef1707d",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 222,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5089,7 +5119,7 @@
           "height": 328
         }
       },
-      "execution_count": 223,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5496,12 +5526,11 @@
       "metadata": {
         "id": "CQvwjpgc9skF",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "c161173c-ba7d-45af-f17f-d788e7e50e5f"
       },
-      "execution_count": 224,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -5566,7 +5595,7 @@
         "id": "tqzAVDYCD2VL",
         "outputId": "6d1ecc06-d2e7-4a78-ccd4-d9cb1d8a3eb5"
       },
-      "execution_count": 225,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5641,7 +5670,7 @@
           "height": 811
         }
       },
-      "execution_count": 226,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -5706,7 +5735,7 @@
           "height": 163
         }
       },
-      "execution_count": 231,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6063,12 +6092,11 @@
       "metadata": {
         "id": "Qdibm0y1-WHA",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "outputId": "edbfab7e-3b30-48ae-c13e-5304b8f7ea98"
       },
-      "execution_count": 228,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6113,7 +6141,7 @@
           "height": 1197
         }
       },
-      "execution_count": 229,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
