--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -4997,8 +4997,9 @@
       "source": [
         "### 6.2 Clustering – K-means\n",
         "\n",
-        "We apply K-means clustering to discover student groups with similar characteristics **without using the GradeClass label**.  \n",
-        "All numeric features are standardized before clustering to ensure equal contribution."
+        "We perform unsupervised clustering using K-means to identify groups of students with similar academic and behavioral characteristics.\n",
+        "Before applying the algorithm, all numerical features are standardized using Z-score normalization to ensure equal contribution of each variable and to avoid scale dominance.\n",
+        "The optimal number of clusters (K) is selected based on Elbow and Silhouette analysis."
       ],
       "metadata": {
         "id": "8bpQ3ooS9drV"
