--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -4838,7 +4838,7 @@
           "height": 1000
         }
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5353,9 +5353,22 @@
       "source": [
         "### 6.2 Clustering – K-means\n",
         "We perform unsupervised clustering using K-means to identify groups of students with similar academic and behavioral characteristics.\n",
-        "Before applying the algorithm, all numerical features are standardized using Z-score normalization to ensure equal contribution of each variable and to avoid scale dominance.\n",
-        "Based on Elbow and Silhouette analysis, the optimal number of clusters (K = 3) is selected.\n",
-        "The three clusters represent high-performing students, low-performing students, and medium-performing students, distinguished by differences in GPA, absences, study time, and parental support."
+        "\n",
+        "- Cluster 0 (Medium Performers):\n",
+        "  - Average GPA (2.29), Medium Absences (9.16), Low Study Time (4.44)\n",
+        "  - Represents average students with moderate engagement\n",
+        "  - Count: 608 students\n",
+        "\n",
+        "- Cluster 1 (Low Performers): ⚠️ AT-RISK GROUP\n",
+        "  - Lowest GPA (1.07), Highest Absences (22.45), Low Study Time (9.88)\n",
+        "  - Needs immediate intervention\n",
+        "  - Count: 1,057 students (largest group!)\n",
+        "\n",
+        "- Cluster 2 (High Performers): ⭐\n",
+        "  - Highest GPA (2.80), Lowest Absences (7.54), Highest Study Time (14.07)\n",
+        "  - Strong academic profile\n",
+        "  - Count: 727 students\n",
+        "\"\"\"\n"
       ],
       "metadata": {
         "id": "8bpQ3ooS9drV"
