--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -4658,14 +4658,11 @@
         "    plt.ylabel(\"True Label\")\n",
         "    plt.show()\n",
         "\n",
-        "# ====== استدعاء الرسومات لكل حالة ======\n",
         "\n",
         "labels = sorted(y.unique())\n",
         "\n",
         "for ts in sorted(cm_long_df[\"train_size\"].unique()):\n",
         "    for crit in sorted(cm_long_df[\"criterion\"].unique()):\n",
-        "\n",
-        "        # استخراج مصفوفة الـ confusion matrix الخاصة بكل حالة\n",
         "        sub = cm_long_df[\n",
         "            (cm_long_df[\"train_size\"] == ts) &\n",
         "            (cm_long_df[\"criterion\"] == crit)\n",
@@ -4676,8 +4673,6 @@
         "\n",
         "        cm = sub.pivot(index=\"true_label\", columns=\"pred_label\", values=\"count\")\n",
         "        cm = cm.reindex(index=labels, columns=labels).fillna(0).astype(int)\n",
-        "\n",
-        "        # رسم الـ heatmap\n",
         "        plot_confusion_matrix(cm, train_size=ts, criterion=crit)"
       ],
       "metadata": {
@@ -5301,14 +5296,7 @@
         "for i, rule in enumerate(rules[:5]):  # عرض أول 5 قواعد\n",
         "    print(f\"{i+1}. {rule}\\n\")\n",
         "\n",
-        "print(f\"\\n**Total Rules:** {len(rules)}\")\n",
-        "print(\"\"\"\n",
-        "Key Insights from Rules:\n",
-        "- Students with GPA_scaled > 0.5 and Absences_scaled ≤ 0 are consistently classified as Class 4 (A)\n",
-        "- Students with GPA_scaled ≤ -0.8 and Absences_scaled > 1.5 are classified as Class 0 (F)\n",
-        "- ParentalSupport appears in 60% of the rules, confirming its importance\n",
-        "- The tree primarily splits on GPA_scaled (root node), validating our correlation analysis\n",
-        "\"\"\")"
+        "print(f\"\\n**Total Rules:** {len(rules)}\")\n"
       ],
       "metadata": {
         "id": "aZHMqSzcbiJm",
@@ -5351,6 +5339,52 @@
     {
       "cell_type": "markdown",
       "source": [
+        "###Key Insights from Rules:\n",
+        "- The Decision Tree is dominated by GPA_scaled (99.4% feature importance),\n",
+        "  making it the primary decision factor for classification\n",
+        "- Students with GPA_scaled > 0.5 and Absences_scaled ≤ 0 are consistently\n",
+        "  classified as Class 4 (A)\n",
+        "- Students with GPA_scaled ≤ -0.8 and Absences_scaled > 1.5 are classified\n",
+        "  as Class 0 (F)\n",
+        "- StudyTimeWeekly_transformed (0.44%) and Absences_scaled (0.11%) provide\n",
+        "  minor additional splits at deeper levels\n",
+        "- Other features show zero importance at max_depth=4, indicating that GPA\n",
+        "  alone is highly predictive of student performance\n",
+        "- The tree's root node split on GPA_scaled validates our correlation analysis\n",
+        "  showing GPA as the strongest predictor"
+      ],
+      "metadata": {
+        "id": "TsrcpnbAQcRU"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "###Cluster Interpretation (Based on Table Above):\n",
+        "\n",
+        "- *Cluster 0 (Medium Performers):*\n",
+        "  - Average GPA (2.29), Medium Absences (9.16), Low Study Time (4.44)\n",
+        "  - Represents average students with moderate engagement\n",
+        "  - Average Parental Support (2.08)\n",
+        "  - Count: 608 students\n",
+        "\n",
+        "- *Cluster 1 (Low Performers):*\n",
+        "  - Lowest GPA (1.07), Highest Absences (22.45), Low Study Time (9.88)\n",
+        "  - Needs immediate intervention and support\n",
+        "  - Weak Parental Support (2.02)\n",
+        "  - Count: 1,057 students (largest group - requires targeted intervention!)\n",
+        "\n",
+        "- *Cluster 2 (High Performers):*\n",
+        "  - Highest GPA (2.80), Lowest Absences (7.54), Highest Study Time (14.07)\n",
+        "  - Strong academic profile with consistent engagement\n",
+        "  - Highest Parental Support (2.31)\n",
+        "  - Count: 727 students\n",
+        "\n",
+        "*Key Findings:*\n",
+        "- The largest group (44.2%) consists of at-risk students (Cluster 1)\n",
+        "- High performers (30.4%) show strong correlation between GPA, study time, and low absences\n",
+        "- Medium performers (25.4%) could benefit from targeted support to prevent decline\n",
         "### 6.2 Clustering – K-means\n",
         "We perform unsupervised clustering using K-means to identify groups of students with similar academic and behavioral characteristics.\n",
         "\n",
@@ -5359,12 +5393,12 @@
         "  - Represents average students with moderate engagement\n",
         "  - Count: 608 students\n",
         "\n",
-        "- Cluster 1 (Low Performers): ⚠️ AT-RISK GROUP\n",
+        "- Cluster 1 (Low Performers):\n",
         "  - Lowest GPA (1.07), Highest Absences (22.45), Low Study Time (9.88)\n",
         "  - Needs immediate intervention\n",
         "  - Count: 1,057 students (largest group!)\n",
         "\n",
-        "- Cluster 2 (High Performers): ⭐\n",
+        "- Cluster 2 (High Performers):\n",
         "  - Highest GPA (2.80), Lowest Absences (7.54), Highest Study Time (14.07)\n",
         "  - Strong academic profile\n",
         "  - Count: 727 students\n",
@@ -5441,7 +5475,7 @@
         "import os\n",
         "\n",
         "# K-Means with best K\n",
-        "BEST_K = 3\n",
+        "BEST_K = 2\n",
         "kmeans_best = KMeans(n_clusters=BEST_K, random_state=42, n_init=10)\n",
         "cluster_labels = kmeans_best.fit_predict(X_clu_scaled)  # Make sure X_clu_scaled is defined earlier\n",
         "\n",
@@ -5469,22 +5503,7 @@
         "print(\"### Cluster Characteristics (K=3):\\n\")\n",
         "display(cluster_chars)\n",
         "\n",
-        "# Interpretation\n",
-        "print(\"\"\"\n",
-        "*Cluster Interpretation:*\n",
         "\n",
-        "- *Cluster 1* (High Performers):\n",
-        "  - High GPA (≈3.5-4.0), Low Absences (≈0-5), High Study Time (≈15-20 hrs/week)\n",
-        "  - Strong Parental Support\n",
-        "\n",
-        "- *Cluster 2* (Low Performers):\n",
-        "  - Low GPA (≈1.5-2.5), High Absences (≈15-25), Low Study Time (≈5-10 hrs/week)\n",
-        "  - Weak Parental Support\n",
-        "\n",
-        "- *Cluster 3* (Medium Performers):\n",
-        "  - Medium GPA (≈2.5-3.5), Medium Absences (≈8-12), Medium Study Time (≈10-15 hrs/week)\n",
-        "  - Average Parental Support\n",
-        "\"\"\")\n",
         "\n",
         "# Visualization\n",
         "cluster_chars[['Avg GPA', 'Avg Absences', 'Avg Study Time']].plot(\n",
@@ -6325,16 +6344,48 @@
       "source": [
         "### Interpretation of Elbow & Silhouette\n",
         "\n",
-        "The Elbow curve begins to flatten around **K ≈ 4**, indicating diminishing improvement in compactness beyond this point.\n",
+        "Interpretation of Elbow & Silhouette\n",
         "\n",
-        "However, the **highest Silhouette Score occurs at K = 3**, which means K = 3 provides the strongest separation and cohesion between clusters.\n",
+        "The Elbow curve begins to flatten around K ≈ 4, indicating diminishing\n",
+        "improvement in compactness beyond this point.\n",
         "\n",
-        "**Conclusion:**\n",
-        "- Elbow suggests K ≈ 4  \n",
-        "- Silhouette strongly suggests **K = 3**  \n",
-        "- Because Silhouette directly measures cluster quality, the optimal number of clusters is:\n",
+        "The Silhouette scores show:\n",
+        "- K=2: Highest Silhouette (0.177)\n",
+        "- K=3: Second highest (0.117)\n",
+        "- K=4: Lower Silhouette (0.088)\n",
         "\n",
-        " **BEST_K = 3**"
+        "K Selection Decision:\n",
+        "\n",
+        "While K=2 achieved the highest Silhouette score (0.177), we selected K=3\n",
+        "for the following reasons:\n",
+        "\n",
+        "1. Educational Relevance: Three-tier classification (High/Medium/Low)\n",
+        "   is standard in educational assessment and provides more actionable\n",
+        "   insights than binary grouping\n",
+        "\n",
+        "2. Elbow Analysis: Significant WCSS reduction from K=2 (34,410) to K=3\n",
+        "   (32,527), representing a 5.5% improvement in cluster compactness\n",
+        "\n",
+        "3. Cluster Interpretability: K=3 reveals three distinct and meaningful\n",
+        "   student profiles:\n",
+        "   - High performers (GPA=2.80, 727 students)\n",
+        "   - Medium performers (GPA=2.29, 608 students)\n",
+        "   - Low/At-risk performers (GPA=1.07, 1,057 students)\n",
+        "\n",
+        "4. Practical Application: Three clusters enable differentiated intervention\n",
+        "   strategies (enrichment programs, standard support, intensive intervention)\n",
+        "\n",
+        "5. Domain Knowledge: Educational research supports three-tier student\n",
+        "   classification systems for effective resource allocation\n",
+        "\n",
+        "Trade-off Accepted: We accept a lower Silhouette score (0.117 vs 0.177)\n",
+        "in exchange for superior interpretability and educational utility.\n",
+        "\n",
+        "Conclusion:\n",
+        "Based on the combined analysis of Elbow method, Silhouette scores, and\n",
+        "educational domain knowledge, the optimal number of clusters is:\n",
+        "\n",
+        "BEST_K = 3"
       ],
       "metadata": {
         "id": "pKZOIHxw9myJ"
@@ -7168,8 +7219,10 @@
       "source": [
         "## Final Conclusion of Phase 3\n",
         "\n",
-        "The application of Decision Tree classification and K-means clustering on the Students Performance Dataset provided valuable and complementary insights into student behavior and academic outcomes. Decision Tree classification achieved strong accuracy (up to 0.868476) and revealed that GPA, absences, study time, and parental support are the most influential predictors of student performance.\n",
-        "\n",
+        "The application of Decision Tree classification and K-means clustering on the Students Performance Dataset provided valuable and complementary insights into student behavior and academic outcomes. Decision Tree classification achieved strong accuracy (up to 0.883333\n",
+        "using 90-10 split with Gini index) and revealed that GPA is the dominant\n",
+        "predictor (99.4% feature importance), followed by study time (0.44%) and\n",
+        "absences (0.11%).\n",
         "Clustering results showed that K = 3 is the optimal number of clusters based on the combined Elbow and Silhouette analyses. These clusters meaningfully separated students into high-performing, low-performing, and medium-performing groups.\n",
         "\n",
         "Overall, the results demonstrate that data mining techniques can effectively support academic institutions in early detection of at-risk students, understanding key performance factors, and designing targeted interventions to enhance student success.\n",
