--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -52,8 +52,11 @@
         "K=2 identified as optimal based on Elbow method, Silhouette coefficient, and educational interpretability\n",
         "Two distinct student profiles discovered:\n",
         "\n",
-        "Cluster 0 (At-Risk/Low Performers): 1,210 students (50.6%), GPA=1.14, high absences (21.48)\n",
-        "Cluster 1 (High Performers): 1,182 students (49.4%), GPA=2.69, low absences (7.43)"
+        "Cluster 0 (High Performers): 1,184 students (49.5%), GPA=2.68,\n",
+        "low absences (7.44)\n",
+        "\n",
+        "Cluster 1 (At-Risk/Low Performers): 1,208 students (50.5%), GPA=1.14,\n",
+        "high absences (21.50)"
       ],
       "metadata": {
         "id": "q9H-HuW_OBgS"
@@ -169,7 +172,7 @@
         "id": "yOw0pkMP24y7",
         "outputId": "d2f51ca1-5d48-471d-f02d-e93542ddb603"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -696,7 +699,7 @@
         },
         "outputId": "d8f1fd38-3e9a-470c-82c8-af3d4d8482a8"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1244,7 +1247,7 @@
           "height": 255
         }
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1673,7 +1676,7 @@
           "height": 257
         }
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -2081,7 +2084,7 @@
         },
         "outputId": "d6f99d91-eae7-421b-b6a1-073d44c89355"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2471,7 +2474,7 @@
           "height": 1000
         }
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -4694,7 +4697,7 @@
         "id": "5rL3D24rFlca",
         "outputId": "71f9eb8e-f453-456c-d706-f880e3a9badc"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -4766,7 +4769,8 @@
         "- Class 4 (Grade A): Best predicted with 112 correct predictions out of 121 instances (92.6% accuracy)\n",
         "- Class 0 (Grade F): Only 4 out of 11 correctly predicted (36.4% accuracy) - due to class imbalance\n",
         "- Misclassification pattern: Low-performing students (Class 0,1) are sometimes misclassified as Class 4 due to the dataset having 50.63% of students in Class 4\n",
-        "- Overall: The model performs well for majority classes but struggles with minority cl"
+        "- verall: The model performs well for majority classes but struggles with\n",
+        "minority classes due to severe class imbalance (50.6% in Class A vs 4.5% in Class F)."
       ],
       "metadata": {
         "id": "1YIBWgZfbNcA"
@@ -4845,7 +4849,7 @@
         },
         "outputId": "d581f1f6-1588-4db0-935f-867b9412bbe0"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5317,7 +5321,7 @@
         },
         "outputId": "e4a02862-1369-4b4a-b1f1-7e609143e76c"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5392,7 +5396,7 @@
         },
         "outputId": "0a97ac3e-faff-4804-e8d8-cc5e47830a5e"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5483,7 +5487,7 @@
         },
         "outputId": "4a105169-6ac8-4e4f-fe5e-efe1d2e8f0e3"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -5852,22 +5856,19 @@
       "cell_type": "markdown",
       "source": [
         "##Cluster Interpretation:\n",
-        "Cluster 0 (At-Risk/Low Performers):\n",
+        "Cluster 0 (High Performers):\n",
+        "- Higher GPA (2.68) indicating strong academic performance\n",
+        "- Lowest Absences (7.44) showing consistent attendance\n",
+        "- Higher Study Time (10.35 hours/week)\n",
+        "- Stronger Parental Support (2.23)\n",
+        "- Count: 1,184 students (49.5%)\n",
         "\n",
+        "Cluster 1 (At-Risk/Low Performers):\n",
         "- Lowest GPA (1.14) indicating poor academic performance\n",
-        "- Highest Absences (21.48) showing chronic absenteeism\n",
+        "- Highest Absences (21.50) showing chronic absenteeism\n",
         "- Lower Study Time (9.21 hours/week)\n",
         "- Weaker Parental Support (2.02)\n",
-        "- Count: 1,210 students (50.6%) - Represents the largest group requiring immediate intervention!\n",
-        "\n",
-        "Cluster 1 (High Performers):\n",
-        "\n",
-        "- Higher GPA (2.69) indicating strong academic performance\n",
-        "- Lowest Absences (7.43) showing consistent attendance\n",
-        "- Higher Study Time (10.34 hours/week)\n",
-        "- Stronger Parental Support (2.23)\n",
-        "- Count: 1,182 students (49.4%)\n",
-        "\n",
+        "- Count: 1,208 students (50.5%) - Requires immediate intervention!\n",
         "Key Findings:\n",
         "\n",
         "- The dataset splits almost evenly into two distinct performance groups (50.6% vs. 49.4%)\n",
@@ -5922,7 +5923,7 @@
         },
         "outputId": "865217c9-6ec6-4c15-f834-38b409e3f423"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6345,7 +6346,7 @@
         },
         "outputId": "fec205b8-0003-4b85-8c07-2c2e0471bcd2"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -6408,7 +6409,7 @@
         },
         "outputId": "328e79e1-db13-4e97-a37b-87e8b8cebc55"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6487,7 +6488,7 @@
         },
         "outputId": "e1db5dbd-8f4e-4f2e-b704-e5be3d46f654"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -6551,7 +6552,7 @@
         },
         "outputId": "72b98840-5a53-45e0-97f4-27debcc36401"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6925,7 +6926,7 @@
         },
         "outputId": "34ddc05b-404f-4dcb-ac9a-fa1eddba8820"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -6970,7 +6971,7 @@
         },
         "outputId": "aabfc729-dd06-4fb8-bc9f-98ea8ca86f8a"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
