--- a/Reports Folder/Phase3.ipynb
+++ b/Reports Folder/Phase3.ipynb
@@ -52,11 +52,8 @@
         "K=2 identified as optimal based on Elbow method, Silhouette coefficient, and educational interpretability\n",
         "Two distinct student profiles discovered:\n",
         "\n",
-        "Cluster 0 (High Performers): 1,184 students (49.5%), GPA=2.68,\n",
-        "low absences (7.44)\n",
-        "\n",
-        "Cluster 1 (At-Risk/Low Performers): 1,208 students (50.5%), GPA=1.14,\n",
-        "high absences (21.50)"
+        "Cluster 0 (At-Risk/Low Performers): 1,210 students (50.6%), GPA=1.14, high absences (21.48)\n",
+        "Cluster 1 (High Performers): 1,182 students (49.4%), GPA=2.69, low absences (7.43)"
       ],
       "metadata": {
         "id": "q9H-HuW_OBgS"
@@ -4769,8 +4766,7 @@
         "- Class 4 (Grade A): Best predicted with 112 correct predictions out of 121 instances (92.6% accuracy)\n",
         "- Class 0 (Grade F): Only 4 out of 11 correctly predicted (36.4% accuracy) - due to class imbalance\n",
         "- Misclassification pattern: Low-performing students (Class 0,1) are sometimes misclassified as Class 4 due to the dataset having 50.63% of students in Class 4\n",
-        "- verall: The model performs well for majority classes but struggles with\n",
-        "minority classes due to severe class imbalance (50.6% in Class A vs 4.5% in Class F)."
+        "- Overall: The model performs well for majority classes but struggles with minority cl"
       ],
       "metadata": {
         "id": "1YIBWgZfbNcA"
@@ -5856,24 +5852,27 @@
       "cell_type": "markdown",
       "source": [
         "##Cluster Interpretation:\n",
-        "Cluster 0 (High Performers):\n",
-        "- Higher GPA (2.68) indicating strong academic performance\n",
-        "- Lowest Absences (7.44) showing consistent attendance\n",
-        "- Higher Study Time (10.35 hours/week)\n",
-        "- Stronger Parental Support (2.23)\n",
-        "- Count: 1,184 students (49.5%)\n",
+        "Cluster 0 (At-Risk/Low Performers):\n",
         "\n",
-        "Cluster 1 (At-Risk/Low Performers):\n",
         "- Lowest GPA (1.14) indicating poor academic performance\n",
-        "- Highest Absences (21.50) showing chronic absenteeism\n",
+        "- Highest Absences (21.48) showing chronic absenteeism\n",
         "- Lower Study Time (9.21 hours/week)\n",
         "- Weaker Parental Support (2.02)\n",
-        "- Count: 1,208 students (50.5%) - Requires immediate intervention!\n",
+        "- Count: 1,210 students (50.6%) - Represents the largest group requiring immediate intervention!\n",
+        "\n",
+        "Cluster 1 (High Performers):\n",
+        "\n",
+        "- Higher GPA (2.69) indicating strong academic performance\n",
+        "- Lowest Absences (7.43) showing consistent attendance\n",
+        "- Higher Study Time (10.34 hours/week)\n",
+        "- Stronger Parental Support (2.23)\n",
+        "- Count: 1,182 students (49.4%)\n",
+        "\n",
         "Key Findings:\n",
         "\n",
         "- The dataset splits almost evenly into two distinct performance groups (50.6% vs. 49.4%)\n",
-        "- At-risk students (Cluster 0) show a clear pattern: low GPA, high absences, and weak support systems\n",
-        "- High performers (Cluster 1) demonstrate the opposite: strong GPA, low absences, and better support\n",
+        "High performers (Cluster 0) demonstrate strong GPA (2.68), low absences (7.44), and better support systems\n",
+        "At-risk students (Cluster 1) show a clear pattern: low GPA (1.14), high absences (21.50), and weaker support\n",
         "- The strong negative correlation between GPA and Absences is validated by the clustering results\n",
         "- Parental support shows a meaningful difference between clusters (2.02 vs. 2.23)"
       ],
@@ -7052,9 +7051,10 @@
         "\n",
         "**Cluster Profiles:**\n",
         "\n",
-        "1. At-Risk Group (Cluster 0): 1,210 students (50.6%) with low GPA (1.14), high absences (21.48), and weak support systems\n",
-        "2. High-Performance Group (Cluster 1): 1,182 students (49.4%) with strong GPA (2.69), low absences (7.43), and better engagement\n",
-        "\n",
+        "1. High-Performance Group (Cluster 0): 1,184 students (49.5%) with strong GPA (2.68),\n",
+        "   low absences (7.44), and better engagement\n",
+        "2. At-Risk Group (Cluster 1): 1,208 students (50.5%) with low GPA (1.14),\n",
+        "   high absences (21.50), and weak support systems\n",
         "**Critical Insight:**\n",
         "\n",
         "- The dataset splits almost evenly into two distinct groups, suggesting that approximately half of the student population requires immediate intervention\n",
